--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -75,6 +75,11 @@ body {
     background-color: #fff;
 }
 
+.login__button:active {
+    position: relative;
+    top: 1.5px;
+}
+
 .chat {
     width: 100%;
     height: 100%;
